# binfiddle

./: .gitignore  Cargo.toml  LICENSE  README.md  build_releases.sh
assets/: logo.txt
benches/: search_benchmarks.rs
docs/: USAGE.md  context.md
docs/feature_requests/: live_process.md  search.md
scripts/: build_releases.ps1  build_releases.sh  build_system.md  release.yaml  test_build_system.sh
src/: error.rs  lib.rs  main.rs  process_memory.rs
src/commands/: analyze.rs  chain.rs  convert.rs  diff.rs  edit.rs  hash.rs  mod.rs  patch.rs  read.rs  search.rs  struct_bits.rs  struct_cmd.rs  struct_expr.rs  write.rs
src/utils/: display.rs  mod.rs  parsing.rs  progress.rs
structs_library/: INDEX.md  README.md
structs_library/archives/: ar_header.yaml  tar_ustar_header.yaml
structs_library/audio/: flac_header.yaml  mp3_id3v2_header.yaml  wav_riff_header.yaml
structs_library/compressed/: bzip2_header.yaml  gzip_header.yaml  xz_header.yaml  zip_header.yaml
structs_library/containers/: docker_manifest.yaml
structs_library/data/: sqlite_header.yaml
structs_library/document/: pdf_header.yaml
structs_library/executables/: dotnet_cli_header.yaml  elf32_header.yaml  elf32_program_header.yaml  elf32_section_header.yaml  elf64_dynamic_entry.yaml  elf64_header.yaml  elf64_program_header.yaml  elf64_section_header.yaml  elf64_symbol.yaml  java_class_header.yaml  macho64_header.yaml  macho_universal_header.yaml  pe_header.yaml
structs_library/filesystem/: iso9660_volume_descriptor.yaml
structs_library/firmware/: intel_hex_record.yaml  uf2_block.yaml
structs_library/images/: bmp_header.yaml  gif_header.yaml  jpeg_jfif_header.yaml  png_header.yaml  tiff_header.yaml  webp_header.yaml
structs_library/ml_models/: gguf_header.yaml  onnx_header.yaml  pytorch_model.yaml
structs_library/mobile/: android_dex_header.yaml
structs_library/network/: can_frame.yaml  dns_header.yaml  ethernet_frame.yaml  ipv4_header.yaml  ipv6_header.yaml  tcp_header.yaml  udp_header.yaml
structs_library/security/: x509_der_certificate.yaml
structs_library/video/: mp4_isobmff_header.yaml
tests/: chain_integration.rs  hash_integration.rs  process_memory_integration.rs  process_self_integration.rs  streaming_analyze_integration.rs  streaming_search_integration.rs
