[package]
name = "binfiddle"
version = "0.2.0"
edition = "2021"
authors = ["Araray Velho <araray@gmail.com"]
description = "A powerful binary file manipulation tool"
license = "BSD 3-Clause Clear License"
license-file = "https://github.com/araray/binfiddle/LICENSE"
repository = "https://github.com/araray/binfiddle"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0.12"
hex = "0.4"
byteorder = "1.5.0"
memmap2 = "0.9.5"
regex = "1.11.1"
