[package]
name = "binfiddle"
version = "0.3.1"
edition = "2021"
authors = ["Araray Velho <araray@gmail.com"]
description = "Binfiddle is a developer-focused binary manipulation toolkit designed for flexibility, modularity, and clarity. It enables inspection, patching, differential analysis, and custom exploration of binary data across a variety of formats. Whether you're reverse-engineering, debugging, or building custom workflows for binary files, Binfiddle provides the essential tools without the bloat."
license = "BSD 3-Clause Clear License"
license-file = "https://github.com/araray/binfiddle/LICENSE"
repository = "https://github.com/araray/binfiddle"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0.12"
hex = "0.4"
byteorder = "1.5.0"
memmap2 = "0.9.5"
regex = "1.11.1"
