
[package]
name = "binfiddle"
version = "0.7.0"
edition = "2021"
authors = ["Araray Velho <araray@gmail.com"]
description = "Binfiddle is a developer-focused binary manipulation toolkit designed for flexibility, modularity, and clarity. It enables inspection, patching, differential analysis, and custom exploration of binary data across a variety of formats. Whether you're reverse-engineering, debugging, or building custom workflows for binary files, Binfiddle provides the essential tools without the bloat."
license = "BSD 3-Clause Clear License"
license-file = "https://github.com/araray/binfiddle/LICENSE"
repository = "https://github.com/araray/binfiddle"
keywords = ["binary", "hex", "patching", "forensics", "reverse-engineering"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"

[dependencies]
clap = { version = "4.5.55", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0.18"
hex = "0.4"
byteorder = "1.5.0"
memmap2 = "0.9.9"
regex = "1.12.2"
memchr = "2.7"
termcolor = "1.4"
atty = "0.2"
rayon = "1.11.0"

[dev-dependencies]
tempfile = "3.24.0"
criterion = { version = "0.8.1", features = ["html_reports"] }

[[bin]]
name = "binfiddle"
path = "src/main.rs"

[lib]
name = "binfiddle"
path = "src/lib.rs"

[[bench]]
name = "search_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
